--- a/Pagina1.html
+++ b/Pagina1.html
@@ -8,3 +8,17 @@
     </p>
   </body>
 </html>
+
+<style>
+  h1 {
+    color: white;
+    text-align: center;
+}
+
+body {
+  background-color: orange;
+  text-shadow: 0px 2px 10px white;
+  box-sizing: 10px 10px;
+  color: gray;
+}
+</style>
