--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <p>
       jelou <br> gracias por comprender
     </p>
+    <img src="jijijijiji.jpg" alt="me rio de janeiro">
   </body>
 </html>
 
