--- a/index.html
+++ b/index.html
@@ -1,12 +1,11 @@
 <html>
   <body>
     <h1>
-      hola como les va, hoy les voy a enseñar un lenguaje completamente lascivo * tose *
+      miren un hipervínculo
     </h1>
     <p>
-      jelou <br> gracias por comprender
+      <a href="Pagina1.html"> hola soy un hipervínculo</a>
     </p>
-    <img src="jijijijiji.jpg" alt="me rio de janeiro">
   </body>
 </html>
 
