--- a/Pagina1.html
+++ b/Pagina1.html
@@ -4,7 +4,7 @@
       hola como les va, hoy les voy a enseñar un lenguaje completamente lascivo * tose *
     </h1>
     <p>
-      jelou <br> gracias por comprender
+      jelou <br> <a href="index.html">gracias por comprender</a>
     </p>
     <img src="jijijijiji.jpg" alt="me rio de janeiro">
   </body>
