--- a/Pagina1.html
+++ b/Pagina1.html
@@ -1,4 +1,9 @@
 <html>
+  <head>
+    <title>
+      thisis main jub
+    </title>
+  </head>
   <body>
     <h1>
       hola como les va, hoy les voy a enseñar un lenguaje completamente lascivo * tose *
