--- a/Pagina1.html
+++ b/Pagina1.html
@@ -1,9 +1,4 @@
 <html>
-  <head>
-    <title>
-      thisis main jub
-    </title>
-  </head>
   <body>
     <h1>
       hola como les va, hoy les voy a enseñar un lenguaje completamente lascivo * tose *
@@ -29,3 +24,7 @@ body {
   text-align: center;
 }
 </style>
+
+<code>
+  window.document.title = 'el titulazo supremo epic';
+</code>
