--- a/Pagina1.html
+++ b/Pagina1.html
@@ -6,7 +6,7 @@
     <p>
       jelou <br> <a href="index.html">gracias por comprender</a>
     </p>
-    <img src="jijijijiji.jpg" alt="me rio de janeiro">
+    <img src="img/jijijijiji.jpg" alt="me rio de janeiro">
   </body>
 </html>
 
