come back please

--- a/Pagina1.html
+++ b/Pagina1.html
@@ -7,6 +7,9 @@
       jelou <br> <a href="index.html">gracias por comprender</a>
     </p>
     <img src="img/jijijijiji.jpg" alt="me rio de janeiro">
+    <p>
+      <a href="https://mandarinazinc.blogspot.com/"> volver al blog </a>
+    </p>
   </body>
 </html>
 
