--- a/Pagina1.html
+++ b/Pagina1.html
@@ -1,4 +1,5 @@
 <html>
+  <title> el titulazo supremo epic </title>
   <body>
     <h1>
       hola como les va, hoy les voy a enseñar un lenguaje completamente lascivo * tose *
@@ -27,7 +28,3 @@ body {
   text-align: center;
 }
 </style>
-
-<script>
-  window.document.title = 'el titulazo supremo epic';
-</script>
